feat: changement du nom de domaine

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: mtacnet.tech
+title: mtacnet.fr
 description: Blog personnel de Mickaël Tacnet
 show_downloads: false
 theme: jekyll-theme-hacker
